---
source: modifications.sqltest
expression: |-
  INSERT INTO products (id, name, price, quantity, category)
      VALUES
          (1, 'Widget', 19.99, 100, 'Electronics'),
          (2, 'Gadget', 29.99, 50, 'Electronics'),
          (3, 'Gizmo', 9.99, 200, 'Accessories');
info:
  statement_type: INSERT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN


BYTECODE
addr  opcode           p1  p2  p3  p4              p5  comment
   0  Init              0  52   0                   0  Start at 52
   1  InitCoroutine     2  21   2                   0
   2  Integer           1   3   0                   0  r[3]=1
   3  String8           0   4   0  Widget           0  r[4]='Widget'
   4  Real              0   5   0  19.99            0  r[5]=19.99
   5  Integer         100   6   0                   0  r[6]=100
   6  String8           0   7   0  Electronics      0  r[7]='Electronics'
   7  Yield             2   0   0                   0
   8  Integer           2   3   0                   0  r[3]=2
   9  String8           0   4   0  Gadget           0  r[4]='Gadget'
  10  Real              0   5   0  29.99            0  r[5]=29.99
  11  Integer          50   6   0                   0  r[6]=50
  12  String8           0   7   0  Electronics      0  r[7]='Electronics'
  13  Yield             2   0   0                   0
  14  Integer           3   3   0                   0  r[3]=3
  15  String8           0   4   0  Gizmo            0  r[4]='Gizmo'
  16  Real              0   5   0  9.99             0  r[5]=9.99
  17  Integer         200   6   0                   0  r[6]=200
  18  String8           0   7   0  Accessories      0  r[7]='Accessories'
  19  Yield             2   0   0                   0
  20  EndCoroutine      2   0   0                   0
  21  OpenWrite         1   2   0                   0  root=2; iDb=0
  22    Yield           2  50   0                   0
  23    Copy            3   8   0                   0  r[8]=r[3]
  24    SoftNull        9   0   0                   0
  25    Copy            4  10   0                   0  r[10]=r[4]
  26    Copy            5  11   0                   0  r[11]=r[5]
  27    Copy            6  12   0                   0  r[12]=r[6]
  28    Copy            7  13   0                   0  r[13]=r[7]
  29    OpenWrite       0  11   0                   0  root=11; iDb=0
  30    NotNull         8  32   0                   0  r[8]!=NULL -> goto 32
  31    Goto            0  34   0                   0
  32    MustBeInt       8   0   0                   0
  33    Goto            0  35   0                   0
  34    NewRowid        1   8   0                   0  r[8]=rowid
  35    Affinity        9   5   0                   0  r[9..14] = D, B, E, D, B
  36    HaltIfNull   1299   0  10  products.name    0
  37    HaltIfNull   1299   0  11  products.price   0
  38    NotExists       1  40   8                   0
  39    Halt         1555   0   0  products.id      0
  40    Copy           13  15   0                   0  r[15]=r[13]
  41    Copy            8  16   0                   0  r[16]=r[8]
  42    MakeRecord      9   5  14                   0  r[14]=mkrec(r[9..13])
  43    Copy           13  17   0                   0  r[17]=r[13]
  44    Copy            8  18   0                   0  r[18]=r[8]
  45    MakeRecord     17   2  19                   0  r[19]=mkrec(r[17..18]); for idx_products_category
  46    IdxInsert       0  19  17                   2  key=r[19]
  47    Insert          1  14   8  products         0  intkey=r[8] data=r[14]
  48    Goto            0  49   0                   0
  49  Goto              0  22   0                   0
  50  Goto              0  51   0                   0
  51  Halt              0   0   0                   0
  52  Transaction       0   2  10                   0  iDb=0 tx_mode=Write
  53  Goto              0   1   0                   0
